fix: grade result test